# cpcos

./: .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.arm32v7  Dockerfile.i386  LICENSE  README.md  azure-pipelines.yml  build.sh  conanfile.txt  conanfile_armv7l.txt  conanfile_darwin.txt  conanfile_linux64.txt  conanprofile_arm32v7  create_docker_image.sh  create_docker_image_arm32v7.sh  create_docker_image_armv7l.sh  create_docker_image_i386.sh  run_docker.sh  run_docker_arm32v7.sh  run_docker_i386.sh
cpcos/: json_utils.hpp  network.hpp  sys_exec.hpp  uart.hpp
cpcos/flatbuffers/: hero.fbs
cpcos/proto/: person.proto  pet.proto
docs/: CMakeLists.txt  conf.py  index.rst
tests/: boost_process_gtest.cpp  boost_uuid_gtest.cpp  flatbuffers_gtest.cpp  json_gtest.cpp  protobuf_test.cpp  uart_test.cpp
